feat: rework some page docs and add menu mobile webcomponent

--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
     <div id="app">
       <main id="main"></main>
     </div>
+    <div id="footer"></div>
+    <div id="overlays">
+      <button class="ltds-btn ltds-btn--ghost ltds-btn--shape ltds-btn--sm" id="scrollToTop" style="display: none">
+        <i class="icon lt-icon-back-arrow icon-size-xl"></i>
+      </button>
+    </div>
 
     <modal-dialog id="modal-test" modal-title="Passion Frontend" class="modal modal-color-scheme-primary" max-width="480">
       <div class="lt-frame lt-frame--gap-6">
