--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -1,4 +1,4 @@
-<section class="section u-flex u-mob-flex-col" style="min-height: 100%;height: auto;">
+<section class="section u-flex u-mob-flex-col" style="min-height: 88vh;height: auto;">
      <div class="u-p-11 u-mob-p-4 u-m-auto lt-stack u-h-full u-basis-2-3">
          <div class="lt-frame lt-frame--gap-8 lt-frame--mob-items-center u-m-auto">
              <h1 class="u-fs-7 u-mob-fs-6 u-text-mob-center"><span id="page-title" class="u-text-gradient-primary">LTDS</span> Design System</h1>
@@ -9,14 +9,15 @@
                 </p>
              </div>
              <div class="lt-stack">
-                <button class="ltds-btn ltds-btn--lg ltds-btn--gradient u-min-w-120" data-modal-ref="modal-test">
+                <!-- ltds-btn--gradient -->
+                <button class="ltds-btn ltds-btn--lg u-min-w-120 ltds-btn--responsive" data-modal-ref="modal-test">
                     <span>Découvrir</span>
                     <!-- data-lt-style="solid" -->
                     <i class="icon lt-icon-expertise icon-size-lg"></i>
                 </button>
                 <!-- data-modal-ref="modal-test" -->
                 <a href="/about">
-                    <button class="ltds-btn ltds-btn--lg ltds-btn--outline u-min-w-120">
+                    <button class="ltds-btn ltds-btn--lg ltds-btn--outline ltds-btn--responsive u-min-w-120">
                         <span>Télécharger</span>
                         <!-- <i class="icon lt-icon-download-test icon-size-lg"></i> -->
                         <i class="icon lt-icon-send icon-size-lg"></i>
@@ -26,7 +27,7 @@
         </div>
      </div>
      <div class="lt-stack u-mob-p-4 u-w-full">
-        <section class="splide u-w-full u-h-full u-p-8 u-mob-p-0" aria-label="Splide Basic HTML Example">
+        <div class="splide u-w-full u-h-full u-p-8 u-mob-p-0" aria-label="Splide Basic HTML Example">
             <div class="splide__track u-h-full">
                 <ul class="splide__list">
                     <li class="splide__slide ltds-card ltds-card--no-border u-radii-6 u-mob-p-0">
@@ -40,6 +41,6 @@
                     </li>
                 </ul>
             </div>
-        </section>
+        </div>
      </div>
 </section>
