--- a/src/pages/tokens.html
+++ b/src/pages/tokens.html
@@ -94,7 +94,7 @@
     <ltds-divider></ltds-divider>
 
     <doc-section title="Grandes tailles (layouts, composants media)">
-        <p>Convenient tokens pour contraindre rapidement dimensions max/min.</p>
+        <p>Tokens utilitaires pour contraindre rapidement dimensions max/min.</p>
         <ltds-code-block language="css" dedent>
         :root {
         --large-size-1: 96px;
