feat: add scroll to top btn func + rework buttons

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     </div>
     <div id="footer"></div>
     <div id="overlays">
-      <button class="ltds-btn ltds-btn--ghost ltds-btn--shape ltds-btn--sm" id="scrollToTop" style="display: none">
-        <i class="icon lt-icon-back-arrow icon-size-xl"></i>
+      <button class="ltds-btn ltds-btn--shape-circle" id="scrollToTop" style="display: none">
+        <i class="icon lt-icon-top-arrow icon-size-lg"></i>
       </button>
     </div>
 
@@ -33,7 +33,7 @@
       <div class="lt-frame lt-frame--gap-6">
         <!-- <p class="u-min-h-160">modal test</p> -->
         <p id="jumbo-description-2" class="u-text-secondary u-lh-2">Mon expertise couvre l’ensemble du cycle de développement front-end, depuis la création d’interfaces responsives jusqu’à la conception et la maintenance de design systems évolutifs. Je travaille en collaboration dans des environnements agiles, en livrant constamment un code de haute qualité et en contribuant à l’amélioration du produit grâce à des mises en œuvre UI/UX réfléchies.</p>
-        <button class="ltds-btn ltds-btn--lg u-w-full" data-modal-dismiss>
+        <button class="ltds-btn ltds-btn--primary ltds-btn--lg u-w-full ltds-btn--responsive" data-modal-dismiss>
           <span class="ltds-btn-label">Close</span>
         </button>
       </div>
