--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -9,20 +9,12 @@
                 </p>
              </div>
              <div class="lt-stack">
-                <!-- ltds-btn--gradient -->
-                <button class="ltds-btn ltds-btn--lg u-min-w-120 ltds-btn--responsive" data-modal-ref="modal-test">
-                    <span>Découvrir</span>
-                    <!-- data-lt-style="solid" -->
-                    <i class="icon lt-icon-expertise icon-size-lg"></i>
-                </button>
                 <!-- data-modal-ref="modal-test" -->
-                <a href="/about">
-                    <button class="ltds-btn ltds-btn--lg ltds-btn--outline ltds-btn--responsive u-min-w-120">
-                        <span>Télécharger</span>
-                        <!-- <i class="icon lt-icon-download-test icon-size-lg"></i> -->
-                        <i class="icon lt-icon-send icon-size-lg"></i>
-                    </button>
-                </a>
+                <button id="copy-npm" class="ltds-btn ltds-btn--lg ltds-btn--outline ltds-btn--rounded ltds-btn--responsive u-min-w-120">
+                    <span>npm i @tarik-leviathan/ltds</span>
+                    <!-- <i class="icon lt-icon-download-test icon-size-lg"></i> -->
+                    <i class="icon lt-icon-copy icon-size-lg"></i>
+                </button>
              </div>
         </div>
      </div>
