--- a/src/parts/navbar.html
+++ b/src/parts/navbar.html
@@ -12,19 +12,25 @@
                 <div class="ltds-menu-label">Bases<i class="icon lt-icon-caret-down icon-size-lg"></i></div>
                 <ul class="ltds-menu-submenu u-grid u-grid-12">
                     <a href="/design-system/reset" class="u-col-span-6">
-                        <li>Reset</li>
+                        <li class="ltds-menu-item">Reset</li>
                     </a>
                     <a href="/design-system/tokens" class="u-col-span-6">
-                        <li>Tokens</li>
+                        <li class="ltds-menu-item">Tokens</li>
                     </a>
                     <a href="/design-system/colors" class="u-col-span-6">
-                        <li>Colors</li>
+                        <li class="ltds-menu-item">Colors</li>
                     </a>
                     <a href="/design-system/utilities" class="u-col-span-6">
-                        <li>Utilities</li>
+                        <li class="ltds-menu-item">Utilities</li>
                     </a>
                     <a href="/design-system/accessibility" class="u-col-span-6">
-                        <li>Accessibility</li>
+                        <li class="ltds-menu-item">Accessibility</li>
+                    </a>
+                    <a href="/design-system/dimensions" class="u-col-span-6">
+                        <li class="ltds-menu-item">dimensions</li>
+                    </a>
+                    <a href="/design-system/flexboxes" class="u-col-span-6">
+                        <li class="ltds-menu-item">Flexboxes</li>
                     </a>
                 </ul>
             </li>
@@ -49,25 +55,20 @@
             </a> -->
         </ul>
         <!-- menu mobile burger  -->
-        <panel-menu origin="right" title="Navigation">
+        <panel-menu origin="right" header="Navigation">
         <button class="ltds-btn ltds-btn--sm ltds-btn--ghost ltds-btn--shape panel-menu-trigger">
             <i class="icon lt-icon-burger icon-size-xl"></i>
         </button>
 
         <div class="panel-menu">
-            <div slot="header">
-                <h3 class="u-text-primary">Navigation</h3>
-                <button dismiss aria-label="Fermer" class="ltds-btn ltds-btn--ghost ltds-btn--shape ltds-btn--sm">
-                    <i class="icon lt-icon-close icon-size-sm"></i>
-                </button>
-            </div>
             <ul class="lt-stack u-p-4 lt-stack--gap-2">
-                <li><a href="/design-system/reset">Reset</a></li>
-                <li><a href="/design-system/tokens">Tokens</a></li>
-                <li><a href="/design-system/colors">Colors</a></li>
-                <li><a href="/design-system/utilities">Utilities</a></li>
-                <li><a href="/design-system/accessibility">Accessibility</a></li>
-                <ltds-menu-item></ltds-menu-item>
+                <ltds-menu-item is-btn-like href="/design-system/reset" content="reset"></ltds-menu-item>
+                <ltds-menu-item is-btn-like href="/design-system/tokens" content="tokens"></ltds-menu-item>
+                <ltds-menu-item is-btn-like href="/design-system/colors" content="colors"></ltds-menu-item>
+                <ltds-menu-item is-btn-like href="/design-system/utilities" content="utilities"></ltds-menu-item>
+                <ltds-menu-item is-btn-like href="/design-system/accessibility" content="accessibility"></ltds-menu-item>
+                <ltds-menu-item is-btn-like href="/design-system/dimensions" content="dimensions"></ltds-menu-item>
+                <ltds-menu-item is-btn-like href="/design-system/flexboxes" content="flexboxes"></ltds-menu-item>
             </ul>
         </div>
         </panel-menu>
