feat: improve global ui

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
     <div id="footer"></div>
     <div id="overlays">
-      <button class="ltds-btn ltds-btn--primary ltds-btn--shape-circle" id="scrollToTop" style="display: none">
+      <button class="ltds-btn ltds-btn--gradient ltds-btn--shape-circle" id="scrollToTop" style="display: none">
         <i class="icon lt-icon-top-arrow icon-size-lg"></i>
       </button>
     </div>
