--- a/src/pages/dimensions.html
+++ b/src/pages/dimensions.html
@@ -43,7 +43,18 @@
       .u-w-66-prc { width: 66.6667%; }
       .u-w-75-prc { width: 75%; }
       </ltds-code-block>
-      <p class="u-text-secondary u-fs-0">Exemples : <code>class="u-w-full"</code>, <code>class="u-w-l-5"</code>, <code>class="u-w-50-prc"</code>.</p>
+      <div class="lt-frame">
+        <h3>Exemples</h3>
+        <div class="u-flex">
+          <div class="u-radii-2 u-container--info u-p-1 u-w-auto">u-w-auto inside flex container</div>
+        </div>
+        <div class="u-radii-2 u-container--info u-p-1 u-w-auto">u-w-auto inside block container</div>
+        <div class="u-radii-2 u-container--success u-p-1 u-w-66-prc">u-w-66-prc</div>
+        <div class="u-radii-2 u-container--success u-p-1 u-w-75-prc">u-w-75-prc</div>
+        <div class="u-radii-2 u-container--warning u-p-1 u-w-l-2">u-w-l-2</div>
+        <div class="u-radii-2 u-container--warning u-p-1 u-w-l-4">u-w-l-4</div>
+        <div class="u-radii-2 u-container--danger u-p-1 u-w-full">u-w-full</div>
+      </div>
     </doc-section>
 
     <ltds-divider></ltds-divider>
@@ -65,7 +76,6 @@
       .u-max-w-s-6 { max-width: var(--size-6); }
       .u-max-w-l-8 { max-width: var(--large-size-8); }
       </ltds-code-block>
-      <p class="u-text-secondary u-fs-0">Exemple carte : <code>class="u-max-w-l-5 u-w-full"</code>.</p>
     </doc-section>
 
     <ltds-divider></ltds-divider>
@@ -86,7 +96,6 @@
       .u-h-s-4  { height: var(--size-4); }
       .u-h-l-6  { height: var(--large-size-6); }
       </ltds-code-block>
-      <p class="u-text-secondary u-fs-0">Exemple section plein écran : <code>class="u-min-h-dvh"</code>.</p>
     </doc-section>
 
     <ltds-divider></ltds-divider>
