--- a/src/parts/navbar.html
+++ b/src/parts/navbar.html
@@ -11,6 +11,7 @@
             <li>
                 <div class="ltds-menu-label">Bases<i class="icon lt-icon-caret-down icon-size-lg"></i></div>
                 <ul class="ltds-menu-submenu u-grid u-grid-12">
+                    <h3 class="u-col-span-12 ltds-menu-item">Master the bases</h3>
                     <a href="/design-system/reset" class="u-col-span-6">
                         <li class="ltds-menu-item">Reset</li>
                     </a>
@@ -34,6 +35,16 @@
                     </a>
                 </ul>
             </li>
+
+            <li>
+                <div class="ltds-menu-label">Themes<i class="icon lt-icon-caret-down icon-size-lg"></i></div>
+                <ul class="ltds-menu-submenu u-grid u-grid-12">
+                    <h3 class="u-col-span-12 ltds-menu-item">Select a theme</h3>
+                    <li class="u-col-span-12 theme-switch ltds-menu-item" data-scheme="0">Theme 0</li>
+                    <li class="u-col-span-12 theme-switch ltds-menu-item" data-scheme="1">Purple</li>
+                    <li class="u-col-span-12 theme-switch ltds-menu-item" data-scheme="2">Olive</li>
+                </ul>
+            </li>
     
             <!-- <li>
                 <div class="ltds-menu-label">Atoms<i class="icon lt-icon-caret-down icon-size-lg"></i></div>
@@ -44,8 +55,6 @@
                 </ul>
             </li> -->
             <button class="ltds-btn ltds-btn--ghost ltds-btn--shape" data-modal-ref="modal-test">
-                <!-- <span>À propos</span> -->
-                <!-- data-lt-style="solid" -->
                 <i class="icon lt-icon-expertise icon-size-lg"></i>
             </button>
             <!-- <a href="/">
@@ -61,15 +70,24 @@
         </button>
 
         <div class="panel-menu">
-            <ul class="lt-stack u-p-4 lt-stack--gap-2">
-                <ltds-menu-item is-btn-like href="/design-system/reset" content="reset"></ltds-menu-item>
-                <ltds-menu-item is-btn-like href="/design-system/tokens" content="tokens"></ltds-menu-item>
-                <ltds-menu-item is-btn-like href="/design-system/colors" content="colors"></ltds-menu-item>
-                <ltds-menu-item is-btn-like href="/design-system/utilities" content="utilities"></ltds-menu-item>
-                <ltds-menu-item is-btn-like href="/design-system/accessibility" content="accessibility"></ltds-menu-item>
-                <ltds-menu-item is-btn-like href="/design-system/dimensions" content="dimensions"></ltds-menu-item>
-                <ltds-menu-item is-btn-like href="/design-system/flexboxes" content="flexboxes"></ltds-menu-item>
-            </ul>
+            <div class="lt-frame u-p-4">
+                <ul class="lt-stack lt-stack--gap-2">
+                    <ltds-menu-item is-btn-like href="/design-system/reset" content="reset"></ltds-menu-item>
+                    <ltds-menu-item is-btn-like href="/design-system/tokens" content="tokens"></ltds-menu-item>
+                    <ltds-menu-item is-btn-like href="/design-system/colors" content="colors"></ltds-menu-item>
+                    <ltds-menu-item is-btn-like href="/design-system/utilities" content="utilities"></ltds-menu-item>
+                    <ltds-menu-item is-btn-like href="/design-system/accessibility" content="accessibility"></ltds-menu-item>
+                    <ltds-menu-item is-btn-like href="/design-system/dimensions" content="dimensions"></ltds-menu-item>
+                    <ltds-menu-item is-btn-like href="/design-system/flexboxes" content="flexboxes"></ltds-menu-item>
+                </ul>
+                <ltds-divider></ltds-divider>
+                <div class="lt-frame lt-frame--gap-2">
+                    <h3 class="ltds-menu-item">Select a theme</h3>
+                    <li class="theme-switch ltds-menu-item" data-scheme="0">Theme 0</li>
+                    <li class="theme-switch ltds-menu-item" data-scheme="1">Purple</li>
+                    <li class="theme-switch ltds-menu-item" data-scheme="2">Olive</li>
+                </div>
+            </div>
         </div>
         </panel-menu>
 
