--- a/src/pages/tokens.html
+++ b/src/pages/tokens.html
@@ -22,7 +22,7 @@
         :root {
         /* familles */
         --font-family-base: "Roboto", system-ui, -apple-system, "Segoe UI", sans-serif;
-        --font-family-accent: "Anton", var(--font-family-base);
+        --font-family-accent: "Rubik", var(--font-family-base);
         --font-family-alt: "Mona Sans", var(--font-family-base);
 
         /* poids */
