--- a/src/parts/navbar.html
+++ b/src/parts/navbar.html
@@ -42,7 +42,7 @@
                     <h3 class="u-col-span-12 ltds-menu-item">Select a theme</h3>
                     <li class="u-col-span-12 theme-switch ltds-menu-item" data-scheme="0">Theme 0</li>
                     <li class="u-col-span-12 theme-switch ltds-menu-item" data-scheme="1">Purple</li>
-                    <li class="u-col-span-12 theme-switch ltds-menu-item" data-scheme="2">Olive</li>
+                    <li class="u-col-span-12 theme-switch ltds-menu-item" data-scheme="2">Azure deep</li>
                 </ul>
             </li>
     
@@ -57,38 +57,33 @@
             <button class="ltds-btn ltds-btn--ghost ltds-btn--shape" data-modal-ref="modal-test">
                 <i class="icon lt-icon-expertise icon-size-lg"></i>
             </button>
-            <!-- <a href="/">
-                <li class="ltds-menu-item">
-                    <i class="icon lt-icon-home icon-size-lg"></i>
-                </li>
-            </a> -->
         </ul>
         <!-- menu mobile burger  -->
         <panel-menu origin="right" header="Navigation">
-        <button class="ltds-btn ltds-btn--sm ltds-btn--ghost ltds-btn--shape panel-menu-trigger">
-            <i class="icon lt-icon-burger icon-size-xl"></i>
-        </button>
+            <button class="ltds-btn ltds-btn--sm ltds-btn--ghost ltds-btn--shape panel-menu-trigger">
+                <i class="icon lt-icon-burger icon-size-xl"></i>
+            </button>
 
-        <div class="panel-menu">
-            <div class="lt-frame u-p-4">
-                <ul class="lt-stack lt-stack--gap-2">
-                    <ltds-menu-item is-btn-like href="/design-system/reset" content="reset"></ltds-menu-item>
-                    <ltds-menu-item is-btn-like href="/design-system/tokens" content="tokens"></ltds-menu-item>
-                    <ltds-menu-item is-btn-like href="/design-system/colors" content="colors"></ltds-menu-item>
-                    <ltds-menu-item is-btn-like href="/design-system/utilities" content="utilities"></ltds-menu-item>
-                    <ltds-menu-item is-btn-like href="/design-system/accessibility" content="accessibility"></ltds-menu-item>
-                    <ltds-menu-item is-btn-like href="/design-system/dimensions" content="dimensions"></ltds-menu-item>
-                    <ltds-menu-item is-btn-like href="/design-system/flexboxes" content="flexboxes"></ltds-menu-item>
-                </ul>
-                <ltds-divider></ltds-divider>
-                <div class="lt-frame lt-frame--gap-2">
-                    <h3 class="ltds-menu-item">Select a theme</h3>
-                    <li class="theme-switch ltds-menu-item" data-scheme="0">Theme 0</li>
-                    <li class="theme-switch ltds-menu-item" data-scheme="1">Purple</li>
-                    <li class="theme-switch ltds-menu-item" data-scheme="2">Olive</li>
+            <div class="panel-menu">
+                <div class="lt-frame u-p-4">
+                    <ul class="lt-stack lt-stack--gap-2">
+                        <ltds-menu-item is-btn-like href="/design-system/reset" content="reset"></ltds-menu-item>
+                        <ltds-menu-item is-btn-like href="/design-system/tokens" content="tokens"></ltds-menu-item>
+                        <ltds-menu-item is-btn-like href="/design-system/colors" content="colors"></ltds-menu-item>
+                        <ltds-menu-item is-btn-like href="/design-system/utilities" content="utilities"></ltds-menu-item>
+                        <ltds-menu-item is-btn-like href="/design-system/accessibility" content="accessibility"></ltds-menu-item>
+                        <ltds-menu-item is-btn-like href="/design-system/dimensions" content="dimensions"></ltds-menu-item>
+                        <ltds-menu-item is-btn-like href="/design-system/flexboxes" content="flexboxes"></ltds-menu-item>
+                    </ul>
+                    <ltds-divider></ltds-divider>
+                    <div class="lt-frame lt-frame--gap-2">
+                        <h3 class="ltds-menu-item">Select a theme</h3>
+                        <li class="theme-switch ltds-menu-item" data-scheme="0">Theme 0</li>
+                        <li class="theme-switch ltds-menu-item" data-scheme="1">Purple</li>
+                        <li class="theme-switch ltds-menu-item" data-scheme="2">Azure deep</li>
+                    </div>
                 </div>
             </div>
-        </div>
         </panel-menu>
 
     </div>
