--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -3,7 +3,7 @@
          <div class="lt-frame lt-frame--gap-8 lt-frame--mob-items-center u-m-auto">
              <h1 class="u-fs-7 u-mob-fs-6 u-text-mob-center"><span id="page-title" class="u-text-gradient-primary">LTDS</span> Design System</h1>
              <div class="lt-frame lt-frame--mob-items-center">
-                 <h2 id="page-subtitle" class="u-mob-fs-3 u-text-mob-center">Une vision modulaire et cohérente du design front-end</h2>
+                 <h2 id="page-subtitle" class="u-mob-fs-3 u-text-mob-center">Un design system orienté code, modulaire et extensible.</h2>
                  <p id="jumbo-description" class="u-lh-3 u-text-mob-center u-text-secondary"> 
                     Avec 6 ans d’expérience en développement front-end, je conçois des interfaces web robustes et centrées sur l’utilisateur. Mon approche met l’accent sur un code propre, maintenable et une intégration UI fluide.
                 </p>
