feat: adding grid page

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </button>
     </div>
 
-    <modal-dialog id="modal-test" modal-title="Passion Frontend" class="modal modal-color-scheme-primary" max-width="480">
+    <modal-dialog id="modal-test" modal-title="Passion Frontend" title-icon="lt-icon-expertise" class="modal modal-color-scheme-primary" max-width="480">
       <div class="lt-frame lt-frame--gap-6">
         <!-- <p class="u-min-h-160">modal test</p> -->
         <p id="jumbo-description-2" class="u-text-secondary u-lh-2">Mon expertise couvre l’ensemble du cycle de développement front-end, depuis la création d’interfaces responsives jusqu’à la conception et la maintenance de design systems évolutifs. Je travaille en collaboration dans des environnements agiles, en livrant constamment un code de haute qualité et en contribuant à l’amélioration du produit grâce à des mises en œuvre UI/UX réfléchies.</p>
