--- a/src/parts/navbar.html
+++ b/src/parts/navbar.html
@@ -33,6 +33,9 @@
                     <a href="/design-system/flexboxes" class="u-col-span-6">
                         <li class="ltds-menu-item">Flexboxes</li>
                     </a>
+                    <a href="/design-system/grids" class="u-col-span-6">
+                        <li class="ltds-menu-item">Grids</li>
+                    </a>
                 </ul>
             </li>
 
@@ -54,8 +57,8 @@
                     </a>
                 </ul>
             </li> -->
-            <button class="ltds-btn ltds-btn--ghost ltds-btn--shape" data-modal-ref="modal-test">
-                <i class="icon lt-icon-expertise icon-size-lg"></i>
+            <button class="ltds-btn ltds-btn--ghost ltds-btn--shape ltds-btn--sm" data-modal-ref="modal-test">
+                <i class="icon lt-icon-about icon-size-lg"></i>
             </button>
         </ul>
         <!-- menu mobile burger  -->
@@ -74,6 +77,7 @@
                         <ltds-menu-item is-btn-like href="/design-system/accessibility" content="accessibility"></ltds-menu-item>
                         <ltds-menu-item is-btn-like href="/design-system/dimensions" content="dimensions"></ltds-menu-item>
                         <ltds-menu-item is-btn-like href="/design-system/flexboxes" content="flexboxes"></ltds-menu-item>
+                        <ltds-menu-item is-btn-like href="/design-system/grids" content="grids"></ltds-menu-item>
                     </ul>
                     <ltds-divider></ltds-divider>
                     <div class="lt-frame lt-frame--gap-2">
