--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -1,6 +1,6 @@
-<section class="section u-flex u-mob-flex-col" style="min-height: 88vh;height: auto;">
-     <div class="u-p-11 u-mob-p-4 u-m-auto lt-stack u-h-full u-basis-2-3">
-         <div class="lt-frame lt-frame--gap-8 lt-frame--mob-items-center u-m-auto">
+<section class="section u-flex u-tab-flex-col" style="min-height: 88vh;height: auto;">
+     <div class="u-p-11 u-tab-p-6 u-m-auto lt-stack u-h-full u-basis-2-3">
+         <div class="lt-frame lt-frame--gap-8 lt-frame--tab-items-center u-m-auto">
              <h1 class="u-fs-7 u-mob-fs-6 u-text-mob-center"><span id="page-title" class="u-text-gradient-primary">LTDS</span> Design System</h1>
              <div class="lt-frame lt-frame--mob-items-center">
                  <h2 id="page-subtitle" class="u-mob-fs-3 u-text-mob-center">Un design system orienté code, modulaire et extensible.</h2>
@@ -10,7 +10,7 @@
              </div>
              <div class="lt-stack">
                 <!-- data-modal-ref="modal-test" -->
-                <button id="copy-npm" class="ltds-btn ltds-btn--lg ltds-btn--outline ltds-btn--rounded ltds-btn--responsive u-min-w-120">
+                <button id="copy-npm" class="ltds-btn ltds-btn--lg ltds-btn--gradient ltds-btn--rounded ltds-btn--responsive u-min-w-120">
                     <span>npm i @tarik-leviathan/ltds</span>
                     <!-- <i class="icon lt-icon-download-test icon-size-lg"></i> -->
                     <i class="icon lt-icon-copy icon-size-lg"></i>
@@ -18,12 +18,12 @@
              </div>
         </div>
      </div>
-     <div class="lt-stack u-mob-p-4 u-w-full">
-        <div class="splide u-w-full u-h-full u-p-8 u-mob-p-0" aria-label="Splide Basic HTML Example">
+     <div class="lt-stack u-tab-p-6 u-w-full">
+        <div class="splide u-w-full u-h-full u-p-8 u-tab-p-0" aria-label="Splide Basic HTML Example">
             <div class="splide__track u-h-full">
                 <ul class="splide__list">
-                    <li class="splide__slide ltds-card ltds-card--no-border u-radii-6 u-mob-p-0">
-                        <div class="ltds-card-grid u-h-full u-p-4"></div>
+                    <li class="splide__slide ltds-card ltds-card--lg ltds-card--no-border u-mob-p-0">
+                        <div class="ltds-card-grid u-h-full"></div>
                     </li>
                     <li class="splide__slide">
                         atoms : avatars, alerts, inputs, links, icons
