feat: add alertcomponent to portfolio

--- a/src/pages/colors.html
+++ b/src/pages/colors.html
@@ -30,7 +30,7 @@
         --color-overlay:    #0c162d; /* overlays */
       }
       </ltds-code-block>
-      <p class="u-text-secondary u-fs-0">Conseil : vos composants peuvent pointer sur <code>--surface-page|container|overlay</code> (voir Remap).</p>
+      <ltds-alert scheme="success" title="Remap" content="Conseil : vos composants peuvent pointer sur --surface-page|container|overlay (voir Remap)."></ltds-alert>
     </doc-section>
 
     <ltds-divider></ltds-divider>
@@ -177,7 +177,7 @@
         --gradient-secondary: linear-gradient(to bottom, var(--color-background), var(--color-container));
       }
       </ltds-code-block>
-      <p class="u-text-secondary u-fs-0">Tip : Branchez vos composants sur <code>--surface-*</code> (et non des couleurs en dur).</p>
+      <ltds-alert scheme="info" title="Tip" content="Branchez vos composants sur --surface-* (et non des couleurs en dur)."></ltds-alert>
     </doc-section>
 
     <ltds-divider></ltds-divider>
@@ -252,7 +252,7 @@
         --color-overlay:    #10312d;
       }
       </ltds-code-block>
-      <p class="u-text-secondary u-fs-0">Changer de thème : <code>&lt;body data-scheme="2"&gt;</code>.</p>
+      <ltds-alert scheme="info" title="Tip" content='Changer de thème : <body data-scheme="2">'></ltds-alert>
     </doc-section>
 
     <ltds-divider></ltds-divider>
