--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -1,10 +1,10 @@
 <section class="section u-flex u-tab-flex-col" style="min-height: 88vh;height: auto;">
      <div class="u-p-11 u-tab-p-6 u-m-auto lt-stack u-h-full u-basis-2-3">
          <div class="lt-frame lt-frame--gap-8 lt-frame--tab-items-center u-m-auto">
-             <h1 class="u-fs-7 u-mob-fs-6 u-text-mob-center"><span id="page-title" class="u-text-gradient-primary">LTDS</span> Design System</h1>
+             <h1 class="u-fs-7 u-mob-fs-6 u-text-tab-center"><span id="page-title" class="u-text-gradient-primary">LTDS</span> Design System</h1>
              <div class="lt-frame lt-frame--mob-items-center">
-                 <h2 id="page-subtitle" class="u-mob-fs-3 u-text-mob-center">Un design system orienté code, modulaire et extensible.</h2>
-                 <p id="jumbo-description" class="u-lh-3 u-text-mob-center u-text-secondary"> 
+                 <h2 id="page-subtitle" class="u-mob-fs-3 u-text-tab-center">Un design system orienté code, modulaire et extensible.</h2>
+                 <p id="jumbo-description" class="u-lh-3 u-text-tab-center u-text-secondary"> 
                     Avec 6 ans d’expérience en développement front-end, je conçois des interfaces web robustes et centrées sur l’utilisateur. Mon approche met l’accent sur un code propre, maintenable et une intégration UI fluide.
                 </p>
              </div>
