feat: insert menu nav from menuUtils.js + add spacings page

--- a/src/parts/navbar.html
+++ b/src/parts/navbar.html
@@ -10,32 +10,9 @@
         <ul class="ltds-menu u-display-mob-none">
             <li>
                 <div class="ltds-menu-label">Bases<i class="icon lt-icon-caret-down icon-size-lg"></i></div>
-                <ul class="ltds-menu-submenu u-grid u-grid-12">
+                <ul class="ltds-menu-submenu">
                     <h3 class="u-col-span-12 ltds-menu-item">Master the bases</h3>
-                    <a href="/design-system/reset" class="u-col-span-6">
-                        <li class="ltds-menu-item">Reset</li>
-                    </a>
-                    <a href="/design-system/tokens" class="u-col-span-6">
-                        <li class="ltds-menu-item">Tokens</li>
-                    </a>
-                    <a href="/design-system/colors" class="u-col-span-6">
-                        <li class="ltds-menu-item">Colors</li>
-                    </a>
-                    <a href="/design-system/utilities" class="u-col-span-6">
-                        <li class="ltds-menu-item">Utilities</li>
-                    </a>
-                    <a href="/design-system/accessibility" class="u-col-span-6">
-                        <li class="ltds-menu-item">Accessibility</li>
-                    </a>
-                    <a href="/design-system/dimensions" class="u-col-span-6">
-                        <li class="ltds-menu-item">dimensions</li>
-                    </a>
-                    <a href="/design-system/flexboxes" class="u-col-span-6">
-                        <li class="ltds-menu-item">Flexboxes</li>
-                    </a>
-                    <a href="/design-system/grids" class="u-col-span-6">
-                        <li class="ltds-menu-item">Grids</li>
-                    </a>
+                    <div id="desktop-menu" class="u-grid u-grid-12"></div>
                 </ul>
             </li>
 
@@ -69,16 +46,7 @@
 
             <div class="panel-menu">
                 <div class="lt-frame u-p-4">
-                    <ul class="lt-stack lt-stack--gap-2">
-                        <ltds-menu-item is-btn-like href="/design-system/reset" content="reset"></ltds-menu-item>
-                        <ltds-menu-item is-btn-like href="/design-system/tokens" content="tokens"></ltds-menu-item>
-                        <ltds-menu-item is-btn-like href="/design-system/colors" content="colors"></ltds-menu-item>
-                        <ltds-menu-item is-btn-like href="/design-system/utilities" content="utilities"></ltds-menu-item>
-                        <ltds-menu-item is-btn-like href="/design-system/accessibility" content="accessibility"></ltds-menu-item>
-                        <ltds-menu-item is-btn-like href="/design-system/dimensions" content="dimensions"></ltds-menu-item>
-                        <ltds-menu-item is-btn-like href="/design-system/flexboxes" content="flexboxes"></ltds-menu-item>
-                        <ltds-menu-item is-btn-like href="/design-system/grids" content="grids"></ltds-menu-item>
-                    </ul>
+                    <ul class="lt-stack lt-stack--gap-2" id="mobile-menu"></ul>
                     <ltds-divider></ltds-divider>
                     <div class="lt-frame lt-frame--gap-2">
                         <h3 class="ltds-menu-item">Select a theme</h3>
